incorporated more comments...

--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -7,8 +7,8 @@
 	D. Wittman,$^{1}$
 	M. J. Jee,$^{1}$ 
 	John P. Hughes,$^{3}$ 
-	F. Menanteau,$^{4, 5}$
 	\newauthor
+	F. Menanteau,$^{4, 5}$
 	C. Sif\'{o}n$^{6}$\\
 $^{1}$Department of Physics, University of California Davis, One Shields
 Avenue, Davis, CA 95616, USA\\ 
@@ -22,7 +22,7 @@ W. Green Street, Urbana, IL 61801, USA\\
 $^{6}$Leiden Observatory, Leiden University, PO Box 9513, NL-2300 RA
 Leiden, Netherlands\\}
 \begin{document}
-\date{arXiV 666} \pagerange{\pageref{firstpage}--\pageref{lastpage}}
+\date{arXiV ?} \pagerange{\pageref{firstpage}--\pageref{lastpage}}
 \pubyear{2014} \maketitle \label{firstpage}
 \begin{abstract} 
 Merging galaxy clusters with radio relics provide rare insights to the merger
@@ -601,9 +601,9 @@ relic using:
 \par 
 For the most likely range of $\beta$, we refer to the
 simulations of cluster mergers by both \cite{Springel2007} and
-\cite{Paul2011b} since those are some of the few simulations available that
+\cite{Paul2011b} because those are some of the few simulations available that
 quote shock propagation speeds in the center-of-mass frame of the cluster,
-and in not the ICM frame. 
+rather than the ICM frame. 
 The simulation of the Bullet Cluster by \cite{Springel2007}, 
 indicates that the propagation velocity of the shock evolves such that $\beta \approx 0.95$ within
 $\sim 0.4~\giga$yr after the pericenter. For the analysis of El Gordo,
@@ -620,17 +620,16 @@ propagate with $\beta > 1$. An example of
 merging clusters (Merger F) with $\beta \approx 2.0$ has been reported by the cosmological
 simulations in \citealt{Paul2011b}. 
 However, we note that Merger F from \citealt{Paul2011b} has a lower mass of
-$\sim 1.1 \times 10^{14} M_{\sun}$ in total, and that the time resolution
-of 0.6 Gyr is lower than the one in \cite{Springel2007}.
-The low time resolution from \citealt{Paul2011b} may underestimate the
-pericenter velocity and overestimate $\beta$.
+$\sim 1.1 \times 10^{14} M_{\sun}$ in total, and that the coarse time resolution
+in \citealt{Paul2011b} likely underestimates the
+pericenter velocity and overestimates $\beta$.
 We therefore
 suggest a most likely range, closer to the value of $\beta$ inferred from
 \cite{Springel2007}, as $0.7 \leq \beta \leq 1.5$.
 In section \ref{sec:merger_scenario}, we demonstrate that $\beta$ has to be
-larger than $1.5$ to illustrate the
-extreme to which one must go to avoid the returning model, and in Appendix
-\ref{app:Bayes_factor}, we show the full range of possibilities up til
+larger than $1.5$ to 
+avoid the returning model, and in Appendix
+\ref{app:Bayes_factor}, we show the full range of possibilities up to
 $\beta = 2.0$. 
 \label{sec:positionprior}
 
@@ -638,10 +637,9 @@ $\beta = 2.0$.
 We found that the two subclusters collided with a relative velocity of $2400\pm^{900}_{400}~\kilo\meter~\second^{-1}$, at an estimated projection
 angle of $\alpha = 21\degree\pm^{9}_{11}$. From our analysis of the two
 scenarios, we found that El Gordo is more likely to be observed at a returning
-phase with an estimate of $TSP_{\rm ret} = 0.91\pm^{0.22}_{0.39}$ Gyr.
-The relevant discussion of what we assumed as the relic
-propagation speed for drawing this conclusion is present in section
-\ref{sec:merger_scenario} and Appendix \ref{app:Bayes_factor}. This
+phase with an estimate of $TSP_{\rm ret} = 0.91\pm^{0.22}_{0.39}$ Gyr
+(See section \ref{sec:merger_scenario} and Appendix \ref{app:Bayes_factor}
+for a full discussion of the assumed relic propagation speed). This
 returning scenario puts the
 estimate of the time of pericenter to be when the age of the universe was
 $\sim5.4$ Gyr. We present an
@@ -650,7 +648,7 @@ results only applying the default weights on the left hand side of the table
 and those also applied with the polarization weight on the right hand side.
 Furthermore, we include the plots of all the marginalized PDFs with the
 polarization weight in Appendix~\ref{app:results}. \par 
-Our estimates of $v_{3D}(t_{obs}) = 940\pm^{860}_{580}~\kilo\meter~\second^{-1}$ 
+Our estimate of $v_{3D}(t_{obs}) = 940\pm^{860}_{580}~\kilo\meter~\second^{-1}$ 
 is compatible with the independent estimate from \citealt{L13}. 
 By making use of the Mach number of the NW radio relic, \cite{L13}
 reported an estimate of the upper bound of the relative observed
@@ -667,7 +665,7 @@ subcluster {\it relative to the center-of-mass}.
 %the time of observation.
 \par 
 
-\subsection{time-since-pericenter (TSP) and the merger scenario}
+\subsection{Time-since-pericenter (TSP) and the merger scenario}
 \label{sec:merger_scenario}
 The simulation gives two estimates for
 the time-since-pericenter, with $TSP_{\rm out} = 0.46\pm^{0.09}_{0.16}~\giga \text{yr}$
@@ -675,7 +673,7 @@ and $TSP_{\rm ret} =0.91\pm^{0.39}_{0.22}~\giga\text{yr}$ for the returning mode
 $TSP_{\rm out}$ and $TSP_{\rm ret}$ 
 fit within the observable time scale of the radio
 relics, which is on the scale of $\sim1~\giga$yr.\par 
-Based on section~\ref{sec:positionprior}, we present the marginal PDF of
+Based on section~\ref{sec:positionprior}, we present the PDF of
 $d_{\rm proj}$ using the most likely
 value of $\beta = 0.9$ in Fig.~\ref{fig:our_guessed_scenario} and
 ~\ref{fig:our_guessed_scenario1} to show that
