--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -642,28 +642,30 @@ phase with an estimate of $TSP_{\rm ret} = 0.91\pm^{0.22}_{0.39}$ Gyr
 for a full discussion of the assumed relic propagation speed). This
 returning scenario puts the
 estimate of the time of pericenter to be when the age of the universe was
-$\sim5.4$ Gyr. We present an
+$\sim5.4$ Gyr. 
+Our estimate of $v_{3D}(t_{obs})$ is
+$940\pm^{860}_{580}~\kilo\meter~\second^{-1}$. 
+%is compatible with the independent estimate from \citealt{L13}. 
+This fits comfortably within the upper limit of $2500
+\pm^{400}_{300}\kilo\meter~\second^{-1}$ reported by \cite{L13},
+which was obtained by making use of the Mach number of the NW radio relic.
+\par
+We present an
 overview of all the estimated variables in Table~\ref{tab:outputs}, with
 results only applying the default weights on the left hand side of the table
 and those also applied with the polarization weight on the right hand side.
 Furthermore, we include the plots of all the marginalized PDFs with the
-polarization weight in Appendix~\ref{app:results}. \par 
-Our estimate of $v_{3D}(t_{obs}) = 940\pm^{860}_{580}~\kilo\meter~\second^{-1}$ 
-is compatible with the independent estimate from \citealt{L13}. 
-By making use of the Mach number of the NW radio relic, \cite{L13}
-reported an estimate of the upper bound of the relative observed
-velocity to be $2500
-\pm^{400}_{300}\kilo\meter~\second^{-1}$. 
-From the simulation of the Bullet Cluster, Springel \& Farrar (2007) showed
-that pre-shock gas could travel at as high as $\sim1100~\kilo\meter~\second^{-1}$ from the outer edge of the subclusters to
-the merger center.  It is therefore reasonable to assume the reported speed
-from \cite{L13} to be an estimate of the upper bound of the observed speed of the NW
-subcluster {\it relative to the center-of-mass}.
+polarization weight in Appendix~\ref{app:results}. 
+
+%From the simulation of the Bullet Cluster, Springel \& Farrar (2007) showed
+%that pre-shock gas could travel at as high as $\sim1100~\kilo\meter~\second^{-1}$ from the outer edge of the subclusters to
+%the merger center.  It is therefore reasonable to assume the reported speed
+%from \cite{L13} to be an estimate of the upper bound of the observed speed of the NW
+%subcluster {\it relative to the center-of-mass}.
 %The magnitude of the relative $v_{3D}$ of the subclusters dropped as the
 %subclusters climbed out of their mutual gravitational potential, and
 %reduced to $v_{3D}(t_{obs}) = 940 \pm ^{860}_{580}~\kilo\meter~\second^{-1}$ at
 %the time of observation.
-\par 
 
 \subsection{Time-since-pericenter (TSP) and the merger scenario}
 \label{sec:merger_scenario}
@@ -775,7 +777,7 @@ simulations and hydrodynamical simulations of El Gordo such as
 \cite{Donnert13} and \cite{Molnar14}. Our simulation focuses on giving PDF
 estimates of particular dynamical and kinematic variables, whereas the
 hydrodynamical simulations focused on understanding the detailed gas dynamics
-required to reproduce the X-ray observables and Sunyaev-Zeldovich
+required to reproduce the X-ray observables and SZ 
 observables of El Gordo. The goals,
 assumptions, and initial conditions of \cite{Donnert13} and \cite{Molnar14}
 differ substantially with ours. However, our approach has the advantage of considering a much wider range of geometries and dynamical parameters, and is based on recently measured lensing masses.
@@ -791,9 +793,11 @@ Furthermore, \cite{Molnar14} initialized the relative infall velocity
 (velocity when the separation of subclusters equals the sum of the two virial
 radii) to be $2250~\kilo \meter~ \second^{-1}$. This corresponds to
 $v_{3D}(t_{\rm per}) \gtrsim 4700~\kilo \meter~\second^{-1}$, which is close to
-the escape velocity of the subclusters. From our simulation, there is a
-negligible number of realizations with $v_{3D}(t_{\rm per}) >
-3000~\kilo\meter~\second^{-1}$. The range of projection angles suggested by
+the escape velocity of the subclusters. 
+Our simulation shows 
+a negligible number of realizations with $v_{3D}(t_{\rm per}) >
+3000~\kilo\meter~\second^{-1}$. 
+The range of projection angles suggested by
 \cite{Molnar14} of $\alpha \gtrsim 45\degree$ is also excluded by our
 polarization weight, whereas we are unable to find information concerning
 the projection angle of the simulation from \cite{Donnert13}.\par 
