--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -2,14 +2,14 @@
 \input{bib_alias}
 \title[The return of the merging galaxy subclusters of El Gordo?]
 {The return of the merging galaxy subclusters of El Gordo?}
-\author[K. Y. Ng et al.]{K. Y. Ng,$^{1}$
-	W. A. Dawson,$^{2}$ 
+\author[Karen Y. Ng et al.]{Karen Y. Ng,$^{1}$
+	William A. Dawson,$^{2}$ 
 	D. Wittman,$^{1}$
-	M. J. Jee,$^{1}$ 
+	M. James Jee,$^{1}$ 
 	John P. Hughes,$^{3}$ 
 	\newauthor
-	F. Menanteau,$^{4, 5}$
-	C. Sif\'{o}n$^{6}$\\
+	Felipe Menanteau,$^{4, 5}$
+	Cristobal Sif\'{o}n$^{6}$\\
 $^{1}$Department of Physics, University of California Davis, One Shields
 Avenue, Davis, CA 95616, USA\\ 
 $^{2}$Lawrence Livermore National Laboratory, P.O. Box 808, Livermore, CA 94551-0808, USA \\
@@ -1050,9 +1050,7 @@ follows for most of the output variables:
 		& 0~\text{otherwise}.
 	\end{cases}
 \end{equation}
-In addition, we apply the following weight on $TSP_{\rm ret}$ only when evaluating the
-statistics of $TSP_{\rm ret}$, thus allowing realizations with a valid
-outgoing TSP but an invalid returning $TSP_{\rm ret}$. 
+In addition, we apply the following weight on $TSP_{\rm ret}$:
 \begin{equation}
 	w(TSP_{\rm ret}) = 
 	\begin{cases}
