--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -1,5 +1,46 @@
-\input{style}
-\input{bib_alias}
+%\pdfoutput=1
+%\input{style.tex}
+\documentclass[letterpaper,useAMS,usenatbib]{mn2e}
+\usepackage[colorlinks=true,
+            linkcolor=blue,
+            urlcolor=blue,
+					  citecolor=blue]{hyperref}
+\usepackage{amssymb}
+\usepackage{graphicx}
+\usepackage{amsmath}
+\usepackage[amssymb]{SIunits} 
+\usepackage{booktabs}
+\usepackage{hhline}
+\usepackage{breqn}
+\usepackage{standalone}
+\usepackage{dcolumn}
+	\newcolumntype{d}[1]{D{.}{.}{#1}}
+\usepackage{tabularx}
+\usepackage{booktabs}
+\usepackage{microtype}
+\graphicspath{{graphics/}}
+\newcommand{\mc}[1]{\multicolumn{1}{c}{#1}} % handy shortcut macro
+%-----------------------------------------------------------------------
+%\input{bib_alias.tex}
+\defcitealias{D13}{D13}
+\defcitealias{Jee13}{J13}
+\defcitealias{M12}{M12}
+\defcitealias{Sifon13}{Sif\'{o}n 2013}
+\def\apjl{ApJL }
+\def\aj{AJ }
+\def\apj{ApJ }
+\def\pasp{PASP }
+\def\spie{SPIE }
+\def\apjs{ApJS }
+\def\araa{ARAA }
+\def\aap{A\&A }
+\def\nat{Nature }
+\def\mnras{MNRAS }
+\def\mnrasl{MNRASL }
+\providecommand{\eprint}[1]{\href{http://arxiv.org/abs/#1}{#1}}
+\providecommand{\adsurl}[1]{\href{#1}{ADS}}
+\providecommand{\ISBN}[1]{\href{http://cosmologist.info/ISBN/#1}{ISBN: #1}} 
+%-----------------------------------------------------------------------
 \title[The return of the merging galaxy subclusters of El Gordo?]
 {The return of the merging galaxy subclusters of El Gordo?}
 \author[Karen Y. Ng et al.]{Karen Y. Ng,$^{1}$
@@ -9,7 +50,7 @@
 	John P. Hughes,$^{3}$ 
 	\newauthor
 	Felipe Menanteau,$^{4, 5}$
-	Cristobal Sif\'{o}n$^{6}$\\
+	Crist\'{o}bal Sif\'{o}n$^{6}$\\
 $^{1}$Department of Physics, University of California Davis, One Shields
 Avenue, Davis, CA 95616, USA\\ 
 $^{2}$Lawrence Livermore National Laboratory, P.O. Box 808, Livermore, CA 94551-0808, USA \\
@@ -310,7 +351,25 @@ included in \citetalias{D13}.
 \par
 \subsection{Inputs of the Monte Carlo simulation} \label{sec: inputs}
 \setcounter{table}{0} 
-\input{input_table}
+%\setcounter{table}{0}
+\begin{table}
+\caption{Properties of the sampling PDFs of the Monte Carlo simulation} 
+\begin{center} 
+\begin{tabular}{@{}lcccc}
+\hline \hline Data & Units & Location & Scale & Ref\\ \hline
+$M_{200c_{\mathrm{NW}}}$ & $10^{14} h_{70}^{-1}$ M$_{\odot}$ &13.0&1.6& \citetalias{Jee13}\\ 
+c$_{\mathrm{NW}}$ &  & 2.50& 0.02& \citetalias{{Jee13}} \\ 
+$M_{200c_{\mathrm{SE}}}$ & $10^{14} h_{70}^{-1}$ M$_{\odot}$ &7.6&1.2 & \citetalias{Jee13}\\ 
+$c_{\mathrm{SE}}$ &  & 2.70 & 0.04& \citetalias{Jee13}\\ 
+$z_{\mathrm{NW}}$ &  & 0.86842 & 0.00109& \citetalias{M12}\\ 
+$z_{\mathrm{SE}}$ &  & 0.87110 & 0.00117& \citetalias{M12}\\ 
+d$_{\mathrm{proj}}$ & Mpc & 0.74 &0.007 & \citetalias{Jee13} \\ 
+\hline 
+\end{tabular} 
+\end{center} 
+\label{tab:inputs} 
+\end{table} 
+%\input{input_table.tex}
 \subsubsection{Membership selection and redshift estimation of subclusters}
 We adopted the identification of galaxy membership of El Gordo given by
 \citet{Sifon13} with a total count of 89 galaxies.
@@ -542,7 +601,33 @@ otherwise stated, the main results of the paper are obtained after applying
 this polarization weight in addition to the default weights.
 
 %%---------------------------------------------------------------------------
-\input{output_table}
+%\input{output_table.tex}
+\begin{table*} 
+\begin{minipage}{170mm} 
+\caption{Table of the output PDF properties of the model variables and output variables from Monte Carlo simulation
+\label{tab:outputs}}
+\begin{tabularx}{\textwidth}{@{\extracolsep{\fill}}lccccccccc@{}}
+\hline
+\hline
+&&&&Default weights & & & & Default + polarization weights  \\ 
+\cmidrule{4-6} \cmidrule{8-10} 
+Variables & Units && Location & 68$\%$ CI $^{\dagger}$ &95$\%$ CI && Location & 68$\%$ CI  & 95$\%$ CI \\ 
+\hline 
+$\alpha$ &(degree)&&43&19-69&6-80&&21&10-30&3-34\\
+$d_{\rm proj}$ &Mpc&&0.74&0.74-0.75&0.73-0.76&&0.74&0.74-0.75&0.73-0.76\\
+$d_{\rm max}$ &Mpc&&1.2&0.90-2.2&0.77-4.6&&0.93&0.81-1.2&0.75-1.9\\
+$d_{\rm 3D}$ &Mpc&&1.0&0.79-2.1&0.75-4.3&&0.80&0.76-0.88&0.74-0.91\\
+$TSP_{\rm out}$&Gyr&&0.61&0.4-0.95&0.26-2.4&&0.46&0.30-0.55&0.21-0.64\\
+$TSP_{\rm ret}$&Gyr&&1.0&0.77-1.7&0.63-4.4&&0.91&0.69-1.3&0.59-2.3\\
+$T$&Gyr&&1.6&1.3-2.4&1.2-6.4&&1.4&1.2-1.6&1.2-2.2\\
+$v_{\rm 3D}(t_{\rm obs})$ & \kilo \meter~\second$^{-1}$ &&580&260-1200&59-2400&&940&360-1800&62-2900\\
+$v_{\rm rad}(t_{\rm obs})$ & \kilo \meter~\second$^{-1}$ &&360&140-630&27-880&&310&110-590&8-840\\
+$v_{\rm 3D}(t_{\rm per})$ & \kilo \meter~\second$^{-1}$ &&2800&2400-3700&2100-4200&&2400&2200-2800&2100-3500\\
+\bottomrule
+\end{tabularx}\\
+\footnotesize{$\dagger$ CI stands for confidence interval}\\
+\end{minipage}
+\end{table*}
 \subsection{Extension to the Monte Carlo simulation - Determining merger
 scenario with radio relic position by model comparison}
 
@@ -1033,7 +1118,7 @@ machine learning library for astrophysics \citep{VanderPlas2012}, and IPython, a
 interactive scientific computing, computing in science and engineering
 \citep{Perez2007} .
 \bibliographystyle{mn2e}
-\bibliography{bib}
+\bibliography{ElGordo1.bib}
 \appendix
 \section{DEFAULT WEIGHTS USED FOR DAWSON'S MONTE CARLO SIMULATION}
 \label{app:priors}
@@ -1114,7 +1199,7 @@ uneven sampling of inputs. }
 \begin{minipage}{180mm}
 	\begin{center}
 	%\vspace{200px}
-	\includegraphics[width=0.7\linewidth]{TwoMnWBSG_geoVsinputs.png}
+	\includegraphics[width=0.7\linewidth]{TwoMnWBSG_geoVSinputs.png}
 	\caption{Marginalized PDFs of characteristic distances and projection
 		angle of the merger and the inputs of the simulation.}
 	\end{center}
@@ -1146,7 +1231,7 @@ and the characteristic distances and the projection angle of the merger. }
 \begin{minipage}{180mm}
 	\begin{center}
 	%\vspace{200px}
-	\includegraphics[width=0.7\linewidth]{TwoMnWBSG_timeVsinput.png}
+	\includegraphics[width=0.7\linewidth]{TwoMnWBSG_timeVSinput.png}
 	\caption{Marginalized PDFs of characteristic timescales of the simulation
 and the inputs.}
 	\end{center}
@@ -1187,7 +1272,7 @@ different velocities.}
 \begin{minipage}{180mm}
 	\begin{center}
 	%\vspace{200px}
-	\includegraphics[width=0.7\linewidth]{TwoMnWBSG_velVsinputs.png}
+	\includegraphics[width=0.7\linewidth]{TwoMnWBSG_velVSinputs.png}
 	\caption{Marginalized PDFs of relative velocities characteristic
 	timescales of the simulation and the inputs.}
 	\end{center}
