changing fig 1 size

--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -63,7 +63,7 @@ W. Green Street, Urbana, IL 61801, USA\\
 $^{6}$Leiden Observatory, Leiden University, PO Box 9513, NL-2300 RA
 Leiden, Netherlands\\}
 \begin{document}
-\date{arXiV ?} \pagerange{\pageref{firstpage}--\pageref{lastpage}}
+\date{arXiv 1412.1826} \pagerange{\pageref{firstpage}--\pageref{lastpage}}
 \pubyear{2014} \maketitle \label{firstpage}
 \begin{abstract} 
 Merging galaxy clusters with radio relics provide rare insights to the merger
@@ -124,7 +124,24 @@ The galaxy cluster ACT-CL J0102-4915, (nicknamed ``El Gordo", at z=0.87),
 was discovered via its Sunyaev-Zel'dovich (SZ) effect by the Atacama Cosmology Telescope (ACT;
 \citealt{Menanteau2010}; \citealt{Marriage11}); it has the strongest SZ
 effect of the full ACT survey \citep{Hasselfield2013}, and was discovered
-to be undergoing a major merger approximately in the plane of the sky (\citealt{M12}, hereafter M12). El Gordo possesses a range of noteworthy features that allow us to constrain the merger dynamics in multiple ways. 
+to be undergoing a major merger approximately in the plane of the sky
+(\citealt{M12}, hereafter M12). El Gordo possesses a range of noteworthy features that allow us to constrain the merger dynamics in multiple ways. 
+\begin{figure*}
+	\includegraphics[width=1\textwidth]{ElGordo.png}
+	\caption{Configuration of El Gordo showing overlay of dark
+		matter distribution in blue, and X-ray emission in red. 
+		(Image credit: NASA, ESA and \citealt{Jee13}). 
+		The cross markers show the positions of the northwest (NW) and
+		southeast (SE) dark matter density peaks, and the center of mass (CM)
+		locations respectively. Note that the mass ratio of the NW subcluster
+		to the SE subcluster is $\sim 2:1$ \citep{Jee13}. 
+		The dashed white lines indicate the approximate location and extent of the northwest radio relic (NW relic), the east radio relic (E relic) and the
+		southeast radio relic (SE relic) \citep{L13}.
+		\label{fig:config}
+	}
+\end{figure*}
+
+
 From the spectroscopy and Dressler-Schectman test for the member galaxies
 in \cite{Sifon13}, it is shown that El Gordo does not have complicated
 substructures in its galaxy velocity distribution. 
@@ -146,19 +163,7 @@ On the outskirts, strong radio emission is detected in
 the NW and the SE respectively. These radio emitting regions show steep spectral
 index gradients and are identified as radio relics associated with shock waves
 created from the merger \citep{L13}. 
-\begin{figure}
-	\includegraphics[width=.95\linewidth]{ElGordo.png}
-	\caption{Configuration of El Gordo showing overlay of dark
-		matter distribution in blue, and X-ray emission in red. 
-		(Image credit: NASA, ESA and \citealt{Jee13}). 
-		The cross markers show the positions of the northwest (NW) and
-		southeast (SE) dark matter density peaks, and the center of mass (CM)
-		locations respectively. Note that the mass ratio of the NW subcluster
-		to the SE subcluster is $\sim 2:1$ \citep{Jee13}. 
-		The dashed white lines indicate the approximate location and extent of the northwest radio relic (NW relic), the east radio relic (E relic) and the
-		southeast radio relic (SE relic) \citep{L13}.
-		\label{fig:config}}
-\end{figure}
+
 El Gordo is one of $\sim 50$ galaxy clusters that have
 been associated with a radio relic and show dissociation between the X-ray
 gas and the DM subclusters. \par 
@@ -274,7 +279,7 @@ attraction.  In particular, the required $\vec{D}$ includes the masses ($M_{200_
 projected separation of the two subclusters ($d_{\rm proj}$).  See
 Table~\ref{tab:inputs} for quantitative descriptions of the sample PDFs, and
 the outputs with physical importance are described in detail in Section
-\ref{sec: outputs}. \par
+~\ref{sec: outputs}. \par
 %We adopt a Bayesian interpretation of the PDFs of the Monte Carlo
 %simulation so we can talk about the PDF of parameters. 
 %The Bayes chain rule that underlies the simulation can be written as:
@@ -331,7 +336,7 @@ the corresponding characteristic core
 radius of the NFW halo with the mass of the SE subcluster. We attribute
 the result from \citealt{Molnar14} to incomplete exploration of
 the parameter space, and note that other impact parameter values may also match the
-X-ray observables of El Gordo.
+X-ray observables of El Gordo. \par
 %% scale radius according to me seems to be ~.7 Mpc 
 %% r200C = 1.4 Mpc  
 %% Ricker -> fig. 0
@@ -340,11 +345,7 @@ X-ray observables of El Gordo.
 %Furthermore, according to
 %\cite{Ricker98}, the resulting dark matter remnant of bimodal cluster mergers would
 %have drastic differences only when the impact parameter $> 10~ r_{\text{core}}$.
-\par
- 
-
-
-Other assumptions in this simulation include negligible dynamical friction
+ Other assumptions in this simulation include negligible dynamical friction
 during the merger, negligible mass accretion and negligible self-interaction
 of dark matter. Discussion of the effects of each of these assumptions is
 included in \citetalias{D13}.  
