modified paper according the first two referee comments

--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -110,8 +110,9 @@ of the cluster components like no other systems.
 In terms of mass content, dark matter makes up $\sim80\%$ of the mass of clusters
 of galaxies, a smaller portion of the mass consist of intercluster
 gas($\sim15\%$ in mass content), and sparsely spaced galaxies ($\sim2\%$ in mass content). During a merger of
-clusters, the subclusters are accelerated to high speeds of several
-thousand \kilo \meter~\second$^{-1}$. The offsets of
+clusters of the high mass range of $10^{14} M_{\sun}$ to the low mass end of
+$10^{15} M_{\sun}$, the subclusters are accelerated to high speeds of 
+$\sim 2000 - 3000~\kilo \meter~\second^{-1}$. The offsets of
 different components of the subclusters reflect the differences in the
 strengths of interactions between various components. Galaxies are
 expected to lead the gas due to their negligible interaction cross
@@ -278,8 +279,7 @@ the collision of the two NFW halos due to the mutual gravitational
 attraction.  In particular, the required $\vec{D}$ includes the masses ($M_{200_{NW}},M_{200_{SE}}$) the redshifts ($z_{NW}, z_{SE}$) and the
 projected separation of the two subclusters ($d_{\rm proj}$).  See
 Table~\ref{tab:inputs} for quantitative descriptions of the sample PDFs, and
-the outputs with physical importance are described in detail in Section
-~\ref{sec: outputs}. \par
+the outputs with physical importance are described in detail in Section~\ref{sec:outputs}. \par
 %We adopt a Bayesian interpretation of the PDFs of the Monte Carlo
 %simulation so we can talk about the PDF of parameters. 
 %The Bayes chain rule that underlies the simulation can be written as:
@@ -350,7 +350,7 @@ during the merger, negligible mass accretion and negligible self-interaction
 of dark matter. Discussion of the effects of each of these assumptions is
 included in \citetalias{D13}.  
 \par
-\subsection{Inputs of the Monte Carlo simulation} \label{sec: inputs}
+\subsection{Inputs of the Monte Carlo simulation} \label{sec:inputs}
 \setcounter{table}{0} 
 %\setcounter{table}{0}
 \begin{table}
@@ -400,7 +400,7 @@ respectively \citep{Beers90}.
 Both the estimated redshifts of the subclusters and the uncertainties are
 consistent with estimates of $z=0.8701 \pm 0.0009$ for El Gordo given by \citealt{Sifon13}, and the fact that the
 member galaxies of El
-Gordo shows large velocity dispersion, i.e. the largest velocity
+Gordo shows large velocity dispersion, i.e.\ the largest velocity
 dispersion among all the ACT galaxy clusters, as reported by
 \citetalias{M12}.
 
@@ -416,7 +416,7 @@ light. The relative radial velocity was calculated by:
 	\Delta v_{rad}(t_{obs}) = \frac{|v_2 - v_1|}{1-\frac{v_1 v_2}{c^2}}.
 \end{equation}
 We obtained a low radial velocity difference of the two subclusters to be
-$476~\pm~242~\kilo\meter~\second^{-1}$ (See Fig. \ref{fig:
+$476~\pm~242~\kilo\meter~\second^{-1}$ (See Fig.~\ref{fig:
 bootstrap_redshift}). 
 The radial velocity difference of $586~\kilo \meter~\second^{-1}$ reported by \citetalias{M12} 
 is higher than our estimates but within the 68\% bias-corrected
@@ -437,7 +437,7 @@ distribution.}
 \end{figure}
 \begin{figure}
 	\includegraphics[width = \linewidth]{bootstrapped_redshift.png}
-	\caption{\label{fig: bootstrap_redshift} Bootstrapped location of the
+	\caption{\label{fig:bootstrap_redshift} Bootstrapped location of the
 	redshift estimates and $v_{rad}$ estimates for each subcluster using the
 	selected spectroscopic members. The shaded histograms represent the
 	bootstrapped samples.
@@ -460,7 +460,7 @@ subcluster, with a 1'' standard deviation each as estimated from the
 convergence map of \citet{Jee13}. The
 inferred centroid locations correspond to a mean projected separation
 ($d_{\rm proj}$) of $0.74\pm {0.007}$ Mpc. 
-\subsection{Outputs of the Monte Carlo simulation}\label{sec: outputs}
+\subsection{Outputs of the Monte Carlo simulation}\label{sec:outputs}
 %\input{2.2_0_monte_carlo_outputs}
 
 We outline the outputs of the simulation here to facilitate the discussion
