added more reply to referee comments

--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -174,7 +174,8 @@ the dynamical parameters after taking into account all
 constraints and uncertainties due to the missing variables.
 Since mergers of clusters proceed on the time-scale of many millions of
 years, one of the most important missing variables to infer is the
-time-since-pericenter (TSP).
+time-since-pericenter (TSP), which is defined to be the time when the mass
+peaks of the DM subclusters coincide.
 Determining the TSP of similar clusters helps
 us reconstruct different stages and recover the physics of a cluster merger.
 
@@ -532,7 +533,7 @@ maximum observable integrated polarization fraction ($\langle P \rangle$).
 	\includegraphics[width=\linewidth]{Ensslin_polar_fig.png}
 	\caption{Predictions of polarization percentage of the radio relic at a
 		given projection angle from different models, reproduced from
-		\citep{E98} or equation \ref{eqn:Ensslin_model}. Each model assumes electrons producing the radio emission
+		\citep{E98} or equation ~\ref{eqn:Ensslin_model}. Each model assumes electrons producing the radio emission
 		to be accelerated inside uniform magnetic field of various strengths ({\it strong} or 
 		{\it weak}). The curves are plotted with spectral index of the radio emission
 		($\alpha_{radio}$), spectral index of the electrons ($\gamma$) and
@@ -597,7 +598,7 @@ w(\alpha) =
 	& 0 \text{ otherwise,}\label{eqn:polarprior}.
 	\end{cases}
 \end{equation}
-We refer to equation \ref{eqn:polarprior} as the polarization weights. Unless
+We refer to equation~\ref{eqn:polarprior} as the polarization weights. Unless
 otherwise stated, the main results of the paper are obtained after applying
 this polarization weight in addition to the default weights.
 
@@ -697,7 +698,7 @@ we suggest $\beta \approx 0.9$ to be the most likely value given that the $TSP$ 
 El Gordo is longer. 
 To include the possible range of valid $\beta$ values,
 we examined $0.7 \leq \beta \leq 1.5$. This range of $\beta \approx 1$ allows us to use  
-equations \ref{eqn:NW_speed} and \ref{eqn:SE_speed} to reflect that the
+equations~\ref{eqn:NW_speed} and~\ref{eqn:SE_speed} to reflect that the
 shock is driven by the merger. We note that the propagation speed of the
 shock is also determined by the temperature, density and other details of
 the gas medium (\citealt{Prokhorov2007}, \citealt{Springel2007},
@@ -712,10 +713,10 @@ pericenter velocity and overestimates $\beta$.
 We therefore
 suggest a most likely range, closer to the value of $\beta$ inferred from
 \cite{Springel2007}, as $0.7 \leq \beta \leq 1.5$.
-In section \ref{sec:merger_scenario}, we demonstrate that $\beta$ has to be
+In section~\ref{sec:merger_scenario}, we demonstrate that $\beta$ has to be
 larger than $1.5$ to 
 avoid the returning model, and in Appendix
-\ref{app:Bayes_factor}, we show the full range of possibilities up to
+~\ref{app:Bayes_factor}, we show the full range of possibilities up to
 $\beta = 2.0$. 
 \label{sec:positionprior}
 
@@ -724,7 +725,7 @@ We found that the two subclusters collided with a relative velocity of $2400\pm^
 angle of $\alpha = 21\degree\pm^{9}_{11}$. From our analysis of the two
 scenarios, we found that El Gordo is more likely to be observed at a returning
 phase with an estimate of $TSP_{\rm ret} = 0.91\pm^{0.22}_{0.39}$ Gyr
-(See section \ref{sec:merger_scenario} and Appendix \ref{app:Bayes_factor}
+(See section~\ref{sec:merger_scenario} and Appendix~\ref{app:Bayes_factor}
 for a full discussion of the assumed relic propagation speed). This
 returning scenario puts the
 estimate of the time of pericenter to be when the age of the universe was
@@ -789,7 +790,7 @@ discussed in Section 5.
 %location) of the location of the relic is within the confidence interval of
 %the two models, and found that the returning scenario to predict the relic
 %location to be more compatible with the observed relic location. (See
-%Figure \ref{fig:waldtest}). 
+%Figure~\ref{fig:waldtest}). 
 %It is possible to convert the Wald statistic
 %for each scenario to a p-value \citep{Wasserman04} at each $\beta$, but the
 %p-value only addresses the question: ``assuming a model is true, what is 
@@ -845,7 +846,7 @@ We performed tests of how the output variables vary according to the
 choice of the cutoff of the polarization weight between
 $\alpha_{\text{cutoff}} =
 29 \degree$ to $49\degree$ instead of $35 \degree$, that is, shown as the
-horizontal cut off in Fig. \ref{fig:Ensslin_fig}.
+horizontal cut off in Fig.~\ref{fig:Ensslin_fig}.
 We found that in the most extreme case, choosing the cutoff values as $29
 \degree$, the location of the $v_{3D}(t_{obs})$, is
 increased by $16 \%$. While the $95\%$ CI of $d_{max}$ is
@@ -981,7 +982,7 @@ Both configurations of cool core relative to the subcluster mass peak are
 mentioned in \cite{Markevitch2007}, with the case of the Bullet Cluster
 explained by the ram pressure stripping effect, and the case of El Gordo
 explained by the ram pressure slingshot effect, which only occurs at a
-later stage of a merger (See Fig. \ref{fig:merger_scenario} for a schema depicting this conjectured scenario).\par 
+later stage of a merger (See Fig.~\ref{fig:merger_scenario} for a schema depicting this conjectured scenario).\par 
 Simulation of a major merger by
 \cite{Mathis05} with comparable mass ($1.4 \times 10^{15} M_{\sun}$) and
 mass ratio (1:1) as El Gordo supports
@@ -991,7 +992,7 @@ away from the center of mass than the dark matter by as much as $\sim
 0.2~\mega$pc.  The gas northwest of the cool core of El Gordo shows a comet-like
 morphology with two tails that suggests outbound motion of the cool core, which may seem
 contradictory to the returning scenario. However, from our proposed merger
-scenario of El Gordo in Figure \ref{fig:merger_scenario},
+scenario of El Gordo in Figure~\ref{fig:merger_scenario},
 it is possible that the cool core and the DM are observed to be moving in
 opposite directions, with the DM subcluster started returning for a second core-passage. If the returning scenario is true, El Gordo would be one of the first
 clusters shown to be observed at a returning phase of the merger, after another
@@ -1061,9 +1062,9 @@ clusters pending for answers include:
 after the merger for which radio relics are observable in terms of the merger
 core-passage time-scales? 
 \item How generalizable is the merger scenario in Figure
-	\ref{fig:merger_scenario}?  
+~\ref{fig:merger_scenario}?  
 \item How would the galaxy-DM offset evolve if we were to add that information
-	to Fig. \ref{fig:merger_scenario}?
+	to Fig.~\ref{fig:merger_scenario}?
 \item For how long do transcient X-ray features in merging clusters (such
 		as the wake in El Gordo) persist?
 \end{itemize}
@@ -1155,7 +1156,7 @@ is more probable to observe the subclusters at a stage with a larger $TSP$.
 \section{PLOTS OF OUTPUTS OF THE MONTE CARLO SIMULATION}
 We present the PDFs of the inputs of the dynamical simulation and the
 marginalized PDFs of the outputs after applying the polarization weight in
-addition to the default weights. See Fig. \ref{fig:plot_config} for explanations of
+addition to the default weights. See Fig.~\ref{fig:plot_config} for explanations of
 the order that we present the figures containing the PDFs . 
 \begin{figure}
 	\begin{center}
@@ -1300,7 +1301,7 @@ Quantitatively, we want to compute and compare the probability:
 \end{align}
 where $f$ indicates the corresponding PDF, $M$
 represents one of the merger scenarios, and $\beta$ is defined in equation
-\ref{eqn:NW_speed}, $s_{proj} \in S_{proj}$ and $s_{obs} \in S_{obs}$. 
+~\ref{eqn:NW_speed}, $s_{proj} \in S_{proj}$ and $s_{obs} \in S_{obs}$. 
 We set our priors set to be uniform for the marginalization: 
 \begin{equation}
 	f(\beta | M_{ret}) = f(\beta | M_{out}) =  
@@ -1382,7 +1383,7 @@ $f(S_{proj} \cap S_{obs})$ to penalize the simulated values being different from
 	preferred. For comparison purpose, we also show that $\beta > 1.3$ (top
 	panel) for the outgoing scenario to be favored.  
 	Note that we made use of the polarization weight for producing this figure. 
-	\label{fig: positionprior}}
+	\label{fig:positionprior}}
 \end{figure}
 \clearpage
 \bsp 
