debugging reply have compile issue

--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -178,6 +178,7 @@ time-since-pericenter (TSP), which is defined to be the time when the mass
 peaks of the DM subclusters coincide.
 Determining the TSP of similar clusters helps
 us reconstruct different stages and recover the physics of a cluster merger.
+BLURP ABOUT OUTGOING AND RETURNING SCENARIO and REFER TO FIG 5.
 
 Another crucial, missing piece of information is the 3D
 configuration, i.e.\ the angle between the plane of the sky and the merger
@@ -631,6 +632,14 @@ $v_{\rm 3D}(t_{\rm per})$ & \kilo \meter~\second$^{-1}$ &&2800&2400-3700&2100-42
 \end{table*}
 \subsection{Extension to the Monte Carlo simulation - Determining merger
 scenario with radio relic position by model comparison}
+\begin{figure*}
+	\includegraphics[width=\linewidth]{merger_cartoon_white_bg.pdf}
+	\caption{
+		Illustration of the spatial location of different components of El Gordo at
+		different stages of the merger. Earlier stages are on the left side of later stages. The rightmost returning scenario is preferred from our simulation. 
+	} 
+	\label{fig:merger_cartoon}
+\end{figure*}
 
 One of the biggest questions involving the merger is whether El Gordo is
 observed during a returning or outgoing phase. We compared the two merger
@@ -721,14 +730,6 @@ $\beta = 2.0$.
 
 \section{RESULTS} 
 
-\begin{figure*}
-	\includegraphics[width=\linewidth]{merger_cartoon_white_bg.pdf}
-	\caption{
-		Illustration of the spatial location of different components of El Gordo at
-		different stages of the merger, order by time from left to right. 
-	} 
-	\label{fig:merger_cartoon}
-\end{figure*}
 We found that the two subclusters collided with a relative velocity of $2400\pm^{900}_{400}~\kilo\meter~\second^{-1}$, at an estimated projection
 angle of $\alpha = 21\degree\pm^{9}_{11}$. From our analysis of the two
 scenarios, we found that El Gordo is more likely to be observed at a returning
